--- a/Films/src/app/components/film-detail/film-detail.component.css
+++ b/Films/src/app/components/film-detail/film-detail.component.css
@@ -1,18 +1,97 @@
-.recuadroFilm {
-    width: 410px !important;
-    background-color: black !important;
-    color: white !important;
-    padding: 15px !important;
-    margin-top: 40px !important;
-    margin-bottom: 40px !important;
-    margin-left: 200px !important;
-}
-
 img {
-    width: 380px;
-    height: 530px;
+    width: 320px;
+    height: 430px;
 }
 
-::ng-deep .classTitle {
-    text-align: center !important;
+.button{
+    padding-inline: 0.4rem;
+    font-size: 1rem;
+    padding-block: 0.4rem;
+    background-color: rgb(130, 130, 130);
+    border: 1px solid transparent;
+    transition: border 0.3s ease, border-radius 0.3s ease;
+    cursor: pointer;
+    color: white;
+}
+
+.recuadro-film{
+    background-color: rgb(237, 235, 235);
+    padding-inline: 1rem;
+    padding-block: 1.5rem;
+}
+
+.film-img{
+    border: 1px solid black;
+    padding: 1rem;
+    padding-inline: 1rem;
+}
+
+.button:hover{
+    background-color: rgb(164, 164, 164);
+    border-radius: 1rem;
+}
+
+.box-film-detail{
+    display:flex;
+    justify-content: space-around;
+}
+
+.box-content-film{
+    max-width: 50%;
+    display: grid;
+    padding: 1rem;
+    padding-inline: 2.5rem;
+    margin-block: 0.3rem;
+}
+
+.film-data{
+    margin-top: 0.5rem;
+    padding-inline: 1rem;
+    background-color: rgb(237, 235, 235);
+}
+
+.film-title{
+    text-align: left;
+    color: black;
+}
+
+.data{
+    padding-left: 0.5rem;
+    margin: 0%;
+    margin-block: 0.5rem;
+}
+
+.box-rating{
+    display: flex;
+    align-items: center;
+    padding: 0%;
+}
+
+.star{
+    width: 65px;
+    height: 35px;
+}
+
+.box-description-reviews{
+    margin-block: 0.3rem;
+    max-width: 50%;
+    display: block;
+    padding: 1rem;
+}
+
+.box-description{
+    display: grid;
+    background-color: rgb(237, 235, 235);
+    padding: 1rem;
+}
+
+.description{
+    font-size: 1.4rem;
+    text-align: justify;
+}
+
+.reviews{
+    padding-inline: 1rem;
+    padding-block: 2rem;
+    background-color: rgb(237, 235, 235) !important;
 }
