feat: agregue los botones de biblioteca y lista de favoritos en la lista de botones del menu principal

--- a/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
+++ b/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
@@ -16,7 +16,15 @@
         </div>
     </div>
 
+    <div class="box-fav-list">
+        <button class="button" (click) = "navegarFavouriteList()">Lista favoritos</button>
+    </div>
+
+    <div class="box-biblioteca">
+        <button class="button" (click)="navegarBiblioteca ()" > Mi biblioteca </button>
+    </div>
+
     <div class="box-offers">
-        <button class="button-offers" (click)="navegar('ofertas')">Offers</button>
+        <button class="button" (click)="navegar('ofertas')">Offers</button>
     </div>
 </section>
