--- a/Films/src/app/components/login/login.component.css
+++ b/Films/src/app/components/login/login.component.css
@@ -4,3 +4,16 @@
     border-left: none; /* Quitar borde izquierdo */
     border-radius: 0; /* Eliminar bordes redondeados si es necesario */
   }
+  .input-group {
+    position: relative; /* Asegúrate de que el grupo de entrada tenga una posición relativa */
+  }
+  
+  .btn-link {
+    z-index: 2; /* Asegúrate de que el botón esté por encima del input */
+    color: #007bff; /* Color del ícono */
+    cursor: pointer; /* Cambia el cursor al pasar por encima */
+  }
+  
+  .btn-link:hover {
+    color: #0056b3; /* Color del ícono al pasar el mouse */
+  }
