style: aplique un nuevo estilo a las peliculas del inicio

--- a/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.css
+++ b/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.css
@@ -61,6 +61,7 @@
 }
 
 .li-category {
+    transition: 0.4s;
     padding: 0.2rem 1rem;
     width: 100%; /* Ocupa todo el ancho del contenedor */
 }
