fix: arregle que un admin no acceda a la lista de favoritos y biblioteca, y que no se le muestren los botones cuando inicia sesion. alternative-options.component, biblioteca.component, favourite-list.component

--- a/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
+++ b/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
@@ -16,12 +16,16 @@
         </div>
     </div>
 
-    <div class="box-fav-list">
-        <button class="button" (click) = "navegarFavouriteList()">Lista favoritos</button>
+    <div *ngIf = "!isAdmin">
+        <div class="box-fav-list">
+            <button class="button" (click) = "navegarFavouriteList()">Lista favoritos</button>
+        </div>
     </div>
 
-    <div class="box-biblioteca">
-        <button class="button" (click)="navegarBiblioteca ()" > Mi biblioteca </button>
+    <div *ngIf = !isAdmin>
+        <div class="box-biblioteca">
+            <button class="button" (click)="navegarBiblioteca ()" > Mi biblioteca </button>
+        </div>
     </div>
 
     <div class="box-offers">
