--- a/Films/src/app/components/tarjeta/tarjeta.component.html
+++ b/Films/src/app/components/tarjeta/tarjeta.component.html
@@ -32,6 +32,13 @@
     </div>
 </div>
 
+<div *ngIf="!showBuyWithActualCard">
+    <div class="card-is-empty">
+      <h4 class="guide">Necesita una tarjeta para continuar la operacion</h4>
+      <button id="newCard" class="button" (click)="showFormToAddNewCard()">Agregar una tarjeta</button>
+    </div>
+</div>
+
 <div *ngIf="showFormNewCard && showFormAddCard">  
     <div class="tarjeta-form-overlay">
         <button class="cancel-form" (click)="hideFormToAddNewCard()">X</button>
@@ -61,9 +68,12 @@
           <button class="btn btn-primary margenBoton" type="submit">Confirmar compra</button>
       </form>
     </div>
-    
-    <div class="box-result">
-        {{result}}
+  </div>
+
+  <div *ngIf="isLoading" class="loading-overlay">
+    <div class="loading-content">
+        <div class="spinner"></div>
+        <p>{{ result }}</p>
     </div>
   </div>
   
