--- a/Films/src/app/components/ofertas-aux/ofertas-aux.component.html
+++ b/Films/src/app/components/ofertas-aux/ofertas-aux.component.html
@@ -1,3 +1,27 @@
-<div class = "classDiv" id = "peliculasEnOferta"> 
-    <div id="body" class="tamanioCelda"></div>
-</div>
+<app-alternative-options></app-alternative-options>
+<section *ngIf="filteredFilms.length > 0" class="box-ofertas">
+    <div class="box-title">
+        <h4 class="title">OFERTAS ACTUALES</h4>
+    </div>
+    <div *ngFor="let group of getMovieGroups(filteredFilms)" class="box-group-films">
+      <div *ngFor="let film of group" class="recuadroCelda film">  
+        <div class="box-star">
+          <button id = "buttonStar" (click)="agregarALaListaDeFavoritos(film)" class = "button-star">
+            ☆
+          </button>
+        </div>
+
+        <div class="box-img-title">
+          <img class="image" [src]="film.image" alt="Imagen no disponible">
+          <p class="title-text">{{film.title}}</p>
+        </div>
+
+        <div class="box-options">
+          <button class="button ficha-tecnica" (click)="navegarFilmDetail(film.rank)">Detalles</button>
+          <button class="button btn-carrito" (click)="agregarPeliculaAlCarrito(film)">
+            <img class="carrito-logo" src="/assets/carrito.png" alt="">
+          </button>
+        </div>
+      </div>
+    </div>
+</section>
