--- a/Films/src/app/components/ofertas-aux/ofertas-aux.component.css
+++ b/Films/src/app/components/ofertas-aux/ofertas-aux.component.css
@@ -2,6 +2,16 @@
     text-align: center;
 }
 
+.box-title{
+    margin-bottom: 1.7rem;
+    padding: 1rem;
+    background-color: rgb(174, 174, 174);
+}
+
+.title{
+    margin: 0%;
+}
+
 .classDiv {
     margin: 0 auto;
     width: 50%; 
@@ -16,4 +26,145 @@
 
 .tamanioCelda{
     margin: -2rem;
+}
+
+table {
+    margin: 0 auto;
+}
+
+.classDiv {
+   display: flex;
+   justify-content: center;
+}
+
+/* Estilos para el recuadro de las películas */
+
+/* Añadir un borde blanco alrededor de cada recuadro */
+.celdaBotonEspaciado {
+    padding: 15px;
+}
+
+.box-group-films{
+    display: flex;
+    justify-content: center;
+}
+
+.recuadroCelda {
+    position: relative;
+    overflow: hidden;
+    width: 290px;
+    height: 555px;
+    background-color: black !important;
+    color: white !important;
+    border-radius: 10px !important;
+    margin: 8px;
+    padding: 0.2rem;
+    transition: 0.5s;
+    border: 1px solid white;
+}
+
+.recuadroCelda:hover{
+    box-shadow: rgb(56, 56, 56) 5px 3.5px;
+}
+
+.recuadroCelda:hover .image {
+    filter: brightness(0.6); /* Efecto de sombreado en la imagen */
+}
+
+.film{
+    display: block;
+}
+
+.box-img-title{
+    display: block;
+}
+
+.title-text{
+    margin: 0rem;
+    font-size: 1.2rem;
+    padding-inline: 0.2rem;
+    width: auto;
+    font-weight: 800;
+}
+
+.box-star{
+    display: flex;
+    justify-content: center;
+    align-items: center; /* Centra el botón dentro del contenedor */
+    margin-block:0.7rem;
+}
+
+.button-star {
+    display: flex;
+    justify-content: center;
+    text-align: right !important;
+    border: none;
+    font-size: 40px;
+    background: none;
+    color: white;
+    transition: 0.3s;
+} 
+
+.button-star:hover {
+    color: gold; /* Cambia el color de la estrella al pasar el mouse */
+}
+
+.image{
+    height: 350px;
+    width: 215px;
+    margin-bottom: 1.8rem;
+}
+
+.button{
+    width: auto;
+    border-radius: 0.5rem;
+    padding-inline: 0.4rem;
+    font-size: 1.1rem;
+    padding-block: 0.4rem;
+    background-color:aliceblue;
+    border: 1px solid transparent;
+    transition: border 0.3s ease, border-radius 0.3s ease;
+    cursor: pointer;
+    color: black;
+    font-weight: 500;
+    transition: 0.3s;
+}
+
+.button:hover{
+    background-color: rgb(164, 164, 164);
+}
+
+.btn-carrito{
+    padding: 0.2rem;
+    border-radius: 50%;
+    background-color:aliceblue;
+}
+
+
+.ficha-tecnica{
+
+}
+
+.carrito-logo{
+    height: 45px;
+    width: 45px;
+}
+
+.box-options {
+    position: absolute;
+    top: 50%; /* Centra verticalmente los botones */
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px; /* Espacio entre los botones */
+    opacity: 0; /* Ocultar inicialmente */
+    transition: opacity 0.3s ease;
+    padding: 5px !important;
+}
+
+.recuadroCelda:hover .box-options {
+    opacity: 1;
 }
