style: corregi el estilo de las peliculas en las categorias

--- a/Films/src/app/components/movie-list-components/movie-list-components.component.html
+++ b/Films/src/app/components/movie-list-components/movie-list-components.component.html
@@ -1,17 +1,27 @@
 <app-alternative-options></app-alternative-options>
+<section *ngIf="filteredFilms.length > 0" class="box">
+  <div class="box-title">
+    <h4 class="title">{{category.toUpperCase()}}</h4>
+  </div>  
+  <div *ngFor="let group of getMovieGroups(filteredFilms)" class="box-group-films">
+      <div *ngFor="let film of group" class="recuadroCelda film">  
+        <div class="box-star">
+          <button id = "buttonStar" (click)="agregarALaListaDeFavoritos(film)" class = "button-star">
+            ☆
+          </button>
+        </div>
 
-<div *ngIf="filteredMovies.length > 0">
-  <table>
-    <tr *ngFor="let group of getMovieGroups(filteredMovies)">
-      <td *ngFor="let film of group" class="recuadroCelda">
-          <img [src]="film.image" alt="Imagen no disponible" width="200" height="300">
-          <b style="font-size: 15px;">{{ film.title }}</b>
+        <div class="box-img-title">
+          <img class="image" [src]="film.image" alt="Imagen no disponible">
+          <p class="title-text">{{film.title}}</p>
+        </div>
 
-          <div class = "button-container">
-            <button class="btn btn-primary" (click)="navegarFilmDetail(film.rank)">Ficha técnica</button>
-            <button class="btn btn-primary" (click)="agregarPeliculaAlCarrito(film)">🛒</button>
-          </div>
-      </td>
-    </tr>
-  </table>
-</div>
+        <div class="box-options">
+          <button class="button ficha-tecnica" (click)="navegarFilmDetail(film.rank)">Detalles</button>
+          <button class="button btn-carrito" (click)="agregarPeliculaAlCarrito(film)">
+            <img class="carrito-logo" src="/assets/carrito.png" alt="">
+          </button>
+        </div>
+      </div>
+    </div>
+</section>
