--- a/Films/src/app/components/inicio-aux/inicio-aux.component.css
+++ b/Films/src/app/components/inicio-aux/inicio-aux.component.css
@@ -5,7 +5,7 @@
 .box-title{
     margin-bottom: 1.7rem;
     padding: 1rem;
-    background-color: rgb(174, 174, 174);
+    background-color: #CFCCCC;
 }
 
 .title{
