--- a/Films/src/app/components/carrito/carrito.component.html
+++ b/Films/src/app/components/carrito/carrito.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isLoggedIn" class="box-carrito">
-    <div class="title">
-            <h2 class="title-text">Carrito de Compras</h2>
+    <div class="box-title">
+            <h3 class="title">CARRITO DE COMPRAS</h3>
     </div>
     <section class="padded box-content-shopping-cart">
         <div class="container justify-content-center">
